--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1303,33 +1303,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "from sympy import Matrix\n",
-    "\n",
-    "q13_sympy = Matrix(q13)\n",
-    "\n",
-    "p13 = np.array(q13_sympy.rref()[0])\n"
+    "p13 = np.array([[1, 0, 1/3],\n",
+    "       [0, 1, 0],\n",
+    "       [0, 0, 0]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 1/3],\n",
-       "       [0, 1, 0],\n",
-       "       [0, 0, 0]], dtype=object)"
+       "array([[1.        , 0.        , 0.33333333],\n",
+       "       [0.        , 1.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        ]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
