--- a/homework.ipynb
+++ b/homework.ipynb
@@ -472,20 +472,12 @@
    "source": [
     "### Problem 6\n",
     "\n",
-    "Set `p6` to the result of the matrix multiplication\n",
-    "$\\begin{bmatrix}\n",
-    "1 & 3 \\\\\n",
-    "2 & 0 \\\\\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\n",
-    "0 & 3 \\\\\n",
-    "2 & -1 \\\\\n",
-    "\\end{bmatrix}$\n"
+    "Set p6 to the result of the matrix multiplication begin bmatrix 1 & 3 2 & 0 end bmatrix begin bmatrix 0 & 3 2 & 1 end bmatrix.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,12 +491,13 @@
     "                    [2, 1]])\n",
     "\n",
     "# Multiplication\n",
-    "p6 = matrix1 @ matrix2"
+    "p6 = np.array([[6, 6],\n",
+    "       [0, 6]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +507,7 @@
        "       [0, 6]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1702,7 @@
        "array([[1, 2]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1722,7 @@
        "array([[0.4, 0.7, 0.5]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
